--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
 
   django_app:
     build:
-      context: htopiwala06/notes-app:latest
+      context: .
     image: django_app
     container_name: "django_cont"
     ports:
